--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1044,6 +1044,14 @@ Spots Page
   background-color: #fc423d;
 }
 
+.sed-diagenesis-on {
+  background-color: #b3aaac;
+}
+
+.sed-fossils-on {
+  background-color: #855209;
+}
+
 .sed-interpretations-on {
   background-color: #fcbf90;
 }
